--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,192 @@
 
 * {
   font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+html, body {
+  height: 100%;
+  width: 100%;
 }
 body {
-  width: 100%;
+  display: flex;
+  flex-direction: column;  
   min-width: 320px;
-  overflow: auto;
-  background: var(--background-color);
+  height: 100%;
+  font-size: 1.6rem;
+  color: white;  
+  background-color: var(--background-color);
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+/* Header */
+.header {
+  width: 100%;  
+  height: 8rem;  
+  background-color: var(--secundary-color)
+}
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nav .bxs-lock, .nav span{
+  color: var(--primary-color);
+}
+
+.main {
+  /* max-width: 1440px; */
+  flex: 1;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  padding: 5rem;
+}
+.information, .generator {
+  flex: 1;
+  padding: 1.5rem;  
+}
+.information .info__container--title {
+  font-size: 5.2rem;
+}
+.information .info__container--description {
+  font-size: 2.2rem;
+  margin-top: 2rem;
+}
+.generator {
+  text-align: center;
+}
+.generator__container--title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+  height: 6rem;
+  margin: 0 auto;
+  background-color: var(--primary-color);
+  border-top-left-radius: 2rem;
+  border-top-right-radius: 2rem;
+  color: var(--secundary-color);
+}
+.generator__container {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  height: 45rem;
+  padding: 0 3rem;
+  margin: 0 auto;
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  background-color: white;
+  color: var(--secundary-color);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+}
+.generator__container--length,
+.generator__container--view,
+.generator__container--options,
+.generator__container--buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25%;  
+}
+.generator__container--length {
+  flex-direction: column;
+  border-bottom: .1rem solid var(--secundary-color);
+}
+.length {
+  display: flex;
+  gap: 2rem;
+  width: 100%;
+  margin-top: 2rem;
+}
+.length__slider {
+  width: 100%;
+}
+.generator__container--options {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.options__items {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;  
+}
+.generator__container--view {
+  border: .2rem solid var(--primary-color);
+  border-radius: 2rem;
+}
+.generator__container--buttons {
+  gap: 2rem;
+}
+.button__copy,
+.button__update {
+  flex: 1;
+  height: 4.5rem;
+  border: 0.1rem solid var(--primary-color);
+  border-radius: 2rem;
+  transition: background-color 0.3s ease;
+}
+.button__copy {
+  background-color: var(--primary-color);
+}
+.button__copy:hover {
+  cursor: pointer;
+  background-color: #ffa920;
+}
+.button__update:hover {
+  cursor: pointer;
+  background-color: #fde6c3;
+}
+
+/* Footer */
+
+.footer {
+  height: 8rem;
+  padding: 0 6rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;   
+}
+.footer .span {
+  width: 100%;
+  border-top: 0.1rem solid var(--primary-color);
+  margin-bottom: 2rem;
+}
+.footer--container {
+  display: flex;
+  margin: auto;
+}
+.copyright, .social__container {
+  display: flex;
+  align-items: center;
+  color: white;
+}
+.copyright p {
+  margin: 0 1rem 0 0.3rem;
+}
+.social {
+  display: flex;
+  gap: 1rem;
+  margin-left: 1rem;  
+}
+.social__container {
+  transition: color 0.3s ease; 
+}
+.social__container:hover {
+  color: var(--primary-color);
+}
+.social__container i {
+  margin-right: 0.3rem;
 }
